app: Add quote request placeholder

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,5 +1,3 @@
-<h1>Hello World</h1>
-
 <script>
 
 /*
@@ -57,7 +55,7 @@ $(function () {
 
     // Get the data. The contents of the data file can be viewed at
     // https://github.com/highcharts/highcharts/blob/master/samples/data/activity.json
-    $.getJSON('https://www.highcharts.com/samples/data/jsonp.php?filename=activity.json&callback=?', function (activity) {
+    $.getJSON('/quotes', function (activity) {
         $.each(activity.datasets, function (i, dataset) {
 
             // Add X values
@@ -91,7 +89,7 @@ $(function () {
                             setExtremes: syncExtremes
                         },
                         labels: {
-                            format: '{value} km'
+                            format: '{value}'
                         }
                     },
                     yAxis: {
