--- a/views/index.erb
+++ b/views/index.erb
@@ -56,76 +56,256 @@ $(function () {
     // Get the data. The contents of the data file can be viewed at
     // https://github.com/highcharts/highcharts/blob/master/samples/data/activity.json
     $.getJSON('/quotes', function (activity) {
+        datasets = activity.datasets;
+        xData = activity.xData
+
         $.each(activity.datasets, function (i, dataset) {
 
             // Add X values
             dataset.data = Highcharts.map(dataset.data, function (val, j) {
                 return [activity.xData[j], val];
             });
-
-            $('<div class="chart">')
-                .appendTo('#container')
-                .highcharts({
-                    chart: {
-                        marginLeft: 40, // Keep all charts left aligned
-                        spacingTop: 20,
-                        spacingBottom: 20
-                    },
-                    title: {
-                        text: dataset.name,
-                        align: 'left',
-                        margin: 0,
-                        x: 30
-                    },
-                    credits: {
-                        enabled: false
-                    },
-                    legend: {
-                        enabled: false
-                    },
-                    xAxis: {
-                        crosshair: true,
-                        events: {
-                            setExtremes: syncExtremes
-                        },
-                        labels: {
-                            format: '{value}'
-                        }
-                    },
-                    yAxis: {
-                        title: {
-                            text: null
-                        }
-                    },
-                    tooltip: {
-                        positioner: function () {
-                            return {
-                                x: this.chart.chartWidth - this.label.width, // right aligned
-                                y: -1 // align to title
-                            };
-                        },
-                        borderWidth: 0,
-                        backgroundColor: 'none',
-                        pointFormat: '{point.y}',
-                        headerFormat: '',
-                        shadow: false,
-                        style: {
-                            fontSize: '18px'
-                        },
-                        valueDecimals: dataset.valueDecimals
-                    },
-                    series: [{
-                        data: dataset.data,
-                        name: dataset.name,
-                        type: dataset.type,
-                        color: Highcharts.getOptions().colors[i],
-                        fillOpacity: 0.3,
-                        tooltip: {
-                            valueSuffix: ' ' + dataset.unit
-                        }
-                    }]
-                });
         });
+
+        // Last chart
+        $('<div class="chart">')
+            .appendTo('#container')
+            .highcharts({
+                chart: {
+                    marginLeft: 40, // Keep all charts left aligned
+                    spacingTop: 20,
+                    spacingBottom: 20
+                },
+                title: {
+                    text: datasets[0].name,
+                    align: 'left',
+                    margin: 0,
+                    x: 30
+                },
+                credits: {
+                    enabled: false
+                },
+                legend: {
+                    enabled: false
+                },
+                xAxis: {
+                    crosshair: true,
+                    events: {
+                        setExtremes: syncExtremes
+                    },
+                    labels: {
+                        format: '{value}'
+                    }
+                },
+                yAxis: {
+                    title: {
+                        text: null
+                    }
+                },
+                tooltip: {
+                    positioner: function () {
+                        return {
+                            x: this.chart.chartWidth - this.label.width, // right aligned
+                            y: -1 // align to title
+                        };
+                    },
+                    borderWidth: 0,
+                    backgroundColor: 'none',
+                    pointFormat: '{point.y}',
+                    headerFormat: '',
+                    shadow: false,
+                    style: {
+                        fontSize: '18px'
+                    },
+                    valueDecimals: 0
+                },
+                series: [{
+                    data: datasets[0].data,
+                    name: datasets[0].name,
+                    type: datasets[0].type,
+                    color: Highcharts.getOptions().colors[0],
+                    fillOpacity: 0.3,
+                    tooltip: {
+                        valueSuffix: ''
+                    }
+                }]
+            });
+
+        // Bid chart
+        $('<div class="chart">')
+            .appendTo('#container')
+            .highcharts({
+                chart: {
+                    zoomType: 'xy',
+                    marginLeft: 40, // Keep all charts left aligned
+                    spacingTop: 20,
+                    spacingBottom: 20
+                },
+                title: {
+                    text: datasets[1].name,
+                    align: 'left',
+                    margin: 0,
+                    x: 30
+                },
+                credits: {
+                    enabled: false
+                },
+                legend: {
+                    enabled: false
+                },
+                xAxis: [{
+                    crosshair: true,
+                    events: {
+                        setExtremes: syncExtremes
+                    },
+                    labels: {
+                        format: '{value}'
+                    }
+                }],
+                yAxis: [
+                  {
+                    title: {
+                        text: null,
+                        style: {
+                            color: Highcharts.getOptions().colors[1]
+                        }
+                    }
+                  },
+                  {
+                    title: {
+                        text: null,
+                        style: {
+                            color: Highcharts.getOptions().colors[0]
+                        }
+                    },
+                    opposite: true
+                  }
+                ],
+                tooltip: {
+                    positioner: function () {
+                        return {
+                            x: this.chart.chartWidth - this.label.width, // right aligned
+                            y: -1 // align to title
+                        };
+                    },
+                    borderWidth: 0,
+                    backgroundColor: 'none',
+                    pointFormat: '{point.y}',
+                    headerFormat: '',
+                    shadow: false,
+                    style: {
+                        fontSize: '18px'
+                    },
+                    valueDecimals: 0,
+                },
+                series: [
+                  {
+                    name: 'Depth',
+                    type: 'column',
+                    yAxis: 1,
+                    data: datasets[2].data,
+                    tooltip: {
+                        valueSuffix: ''
+                    }
+                  },
+                  {
+                    name: 'Price',
+                    type: 'spline',
+                    data: datasets[1].data,
+                    tooltip: {
+                        valueSuffix: ' $'
+                    }
+                  },
+                ]
+            });
+
+        // Ask chart
+        $('<div class="chart">')
+            .appendTo('#container')
+            .highcharts({
+                chart: {
+                    zoomType: 'xy',
+                    marginLeft: 40, // Keep all charts left aligned
+                    spacingTop: 20,
+                    spacingBottom: 20
+                },
+                title: {
+                    text: datasets[3].name,
+                    align: 'left',
+                    margin: 0,
+                    x: 30
+                },
+                credits: {
+                    enabled: false
+                },
+                legend: {
+                    enabled: false
+                },
+                xAxis: [{
+                    crosshair: true,
+                    events: {
+                        setExtremes: syncExtremes
+                    },
+                    labels: {
+                        format: '{value}'
+                    }
+                }],
+                yAxis: [
+                  {
+                    title: {
+                        text: null,
+                        style: {
+                            color: Highcharts.getOptions().colors[1]
+                        }
+                    }
+                  },
+                  {
+                    title: {
+                        text: null,
+                        style: {
+                            color: Highcharts.getOptions().colors[0]
+                        }
+                    },
+                    opposite: true
+                  }
+                ],
+                tooltip: {
+                    positioner: function () {
+                        return {
+                            x: this.chart.chartWidth - this.label.width, // right aligned
+                            y: -1 // align to title
+                        };
+                    },
+                    borderWidth: 0,
+                    backgroundColor: 'none',
+                    pointFormat: '{point.y}',
+                    headerFormat: '',
+                    shadow: false,
+                    style: {
+                        fontSize: '18px'
+                    },
+                    valueDecimals: 0,
+                },
+                series: [
+                  {
+                    name: 'Depth',
+                    type: 'column',
+                    yAxis: 1,
+                    data: datasets[4].data,
+                    tooltip: {
+                        valueSuffix: ''
+                    }
+                  },
+                  {
+                    name: 'Price',
+                    type: 'spline',
+                    data: datasets[3].data,
+                    tooltip: {
+                        valueSuffix: ' $'
+                    }
+                  },
+                ]
+            });
     });
 });
 
