qutoe: Update precision to float fields

--- a/views/index.erb
+++ b/views/index.erb
@@ -129,6 +129,7 @@ $(function () {
                         });
                         return s.join('<br/>');
                     },
+                    valueDecimals: 2
                 },
                 plotOptions: {
                     column: {
@@ -212,6 +213,7 @@ $(function () {
                         });
                         return s.join('<br/>');
                     },
+                    valueDecimals: 2
                 },
                 plotOptions: {
                     column: {
@@ -302,6 +304,7 @@ $(function () {
                         });
                         return s.join('<br/>');
                     },
+                    valueDecimals: 2
                 },
                 plotOptions: {
                     column: {
